--- a/tutorial.html
+++ b/tutorial.html
@@ -14,10 +14,14 @@
     <div class="container">
         <div class="header">header</div>
         <div class="slogan">slogan</div>
-        <div class="game-container">game</div>
+        <div class="game-container">
+            <canvas id="gameCanvas" width="800" height="600"></canvas>
+
+        </div>
         <div class="footer">footer</div>
     </div>
-    <script src="./js/calc.js">
+    <script></script>
+    <script src="./js/snake.js">
     </script>
 </body>
 
