--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 
 <body>
     <div class="container">
-        <div class="header">header</div>
+        <div class="header">header
+            <canvas id="gameCanvas" width="800" height="600"></canvas>
+        </div>
         <div class="slogan">slogan</div>
-        <div class="game-container">game</div>
+        <div class="game-container">
+
+        </div>
         <div class="footer">footer</div>
     </div>
-    <script src="./js/calc.js">
+    <script></script>
+    <script src="./js/snake.js">
     </script>
 </body>
 
