--- a/index.html
+++ b/index.html
@@ -7,23 +7,50 @@
     <title>SNAKELESS</title>
     <link href="./css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     </link>
 </head>
 
 <body>
     <div class="container">
-        <div class="header">header
-            <canvas id="gameCanvas" width="800" height="600"></canvas>
-        </div>
-        <div class="slogan">slogan</div>
-        <div class="game-container">
+        <div class="header">DAN the snake</div>
+        <div class="slogan">Hello, i am DAN. I'm a very hungry snake.
+            Please help me grow by eating those sweety apples!
 
+            <label>Difficulty level <select id="level-select">
+                    <option>Easy</option>
+                    <option>Medium</option>
+                    <option>Hard</option>
+                    <option>Insane</option>
+                </select></label>
         </div>
-        <div class="footer">footer</div>
+        <div class="game-container">
+            <div class="instructions">Click on the dark screen and use arrows to move the snake!</div>
+            <div class="game">
+                <canvas id="gameCanvas" width="800" height="600"></canvas>
+            </div>
+            <div class="points">
+                <button type="button" class="btn btn-primary">
+                    Points <span id="score" class="badge badge-light">0</span>
+                </button>
+            </div>
+        </div>
+        <div class="footer"></div>
     </div>
     <script></script>
     <script src="./js/snake.js">
     </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
