difficulty level working

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
         <div class="slogan">Hello, i am DAN. I'm a very hungry snake.
             Please help me grow by eating those sweety apples!
 
-            <label>Difficulty level <select id="level-select">
-                    <option>Easy</option>
-                    <option>Medium</option>
-                    <option>Hard</option>
-                    <option>Insane</option>
-                </select></label>
+            Difficulty levels
+            <ul>
+                <li>Easy(default) : Press <bold>1</bold>
+                </li>
+                <li>Medium : Press <bold>2</bold>
+                </li>
+                <li>Hard : Press <bold>3</bold>
+                </li>
+                <li>Insane : Press <bold>4</bold>
+                </li>
+            </ul>
         </div>
         <div class="game-container">
             <div class="instructions">Click on the dark screen and use arrows to move the snake!</div>
