--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="game-container">
             <div class="instructions">Click on the dark screen and use arrows to move the snake!</div>
             <div class="game">
-                <canvas id="gameCanvas" width="800" height="600"></canvas>
+                <canvas id="game-canvas" width="800" height="600"></canvas>
             </div>
             <div class="points">
                 <button type="button" class="btn btn-primary">
